--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <html lang="en">
 <head>
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome fi mi homepage</title>
 </head>
 <body>
     <h1>Welcome to Engell Tercero homepage!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolor nihil corrupti voluptatum eveniet laborum quisquam officiis molestias magnam, commodi officia eligendi blanditiis, hic sequi nulla earum temporibus error. Optio.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae atque exercitationem qui eveniet laboriosam quas, voluptas aperiam fugit quidem aspernatur minima nesciunt sit, molestiae quo, perspiciatis eaque natus? Quo, dicta?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis molestiae nisi officiis culpa, ipsa temporibus atque voluptatum blanditiis quae alias impedit facere quo, ex quidem accusamus soluta velit! Tempore.</p>
+    <ul uk-accordion>
+        <li class="uk-open">
+            <a class="uk-accordion-title" href="#">Item 1</a>
+            <div class="uk-accordion-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </li>
+        <li>
+            <a class="uk-accordion-title" href="#">Item 2</a>
+            <div class="uk-accordion-content">
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+            </div>
+        </li>
+        <li>
+            <a class="uk-accordion-title" href="#">Item 3</a>
+            <div class="uk-accordion-content">
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+            </div>
+        </li>
+    </ul>
 </body>
 </html>
