Updating some things

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="css/uikit.min.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,7 @@
 </head>
 <body>
     <h1>Welcome to Engell Tercero homepage!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolor nihil corrupti voluptatum eveniet laborum quisquam officiis molestias magnam, commodi officia eligendi blanditiis, hic sequi nulla earum temporibus error. Optio.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae atque exercitationem qui eveniet laboriosam quas, voluptas aperiam fugit quidem aspernatur minima nesciunt sit, molestiae quo, perspiciatis eaque natus? Quo, dicta?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis molestiae nisi officiis culpa, ipsa temporibus atque voluptatum blanditiis quae alias impedit facere quo, ex quidem accusamus soluta velit! Tempore.</p>
+    <h2>I'm ready fi work tomorrow</h2>
     <ul uk-accordion>
         <li class="uk-open">
             <a class="uk-accordion-title" href="#">Item 1</a>
