Updating the artwork and the web

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
     <title>Welcome fi mi homepage</title>
 </head>
 <body>
-    <h1>Welcome to Engell Tercero homepage!</h1>
+    <div class="uk-position-relative">
+        <img src="images/cover.png" alt="">
+        <div class="uk-position-top">
+            <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+                <div class="uk-navbar-left">
+                    <ul class="uk-navbar-nav">
+                        <li class="uk-active"><a href="#">Homepage</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li>
+                            <a href="#">Navigation</a>
+                            <div class="uk-navbar-dropdown">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li class="uk-active"><a href="#">Upside: The Book</a></li>
+                                    <li><a href="#">Artwork</a></li>
+                                    <li class="uk-nav-header">Software</li>
+                                    <li><a href="#">WMS Warehouse</a></li>
+                                    <li><a href="#">WMS TextFoundation</a></li>
+                                    <li class="uk-nav-divider"></li>
+                                    <li><a href="#">Why Free software?</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+    </div>
+    <h1> Welcome to Engell Tercero homepage!</h1>
     <h2>I'm ready fi work tomorrow</h2>
     <ul uk-accordion>
         <li class="uk-open">
