--- a/index.html
+++ b/index.html
@@ -37,27 +37,7 @@
         </div>
     </div>
     </div>
-    <h1> Welcome to Engell Tercero homepage!</h1>
-    <h2>I'm ready fi work tomorrow</h2>
-    <ul uk-accordion>
-        <li class="uk-open">
-            <a class="uk-accordion-title" href="#">Item 1</a>
-            <div class="uk-accordion-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </li>
-        <li>
-            <a class="uk-accordion-title" href="#">Item 2</a>
-            <div class="uk-accordion-content">
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
-            </div>
-        </li>
-        <li>
-            <a class="uk-accordion-title" href="#">Item 3</a>
-            <div class="uk-accordion-content">
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
-            </div>
-        </li>
-    </ul>
+    <h1 class="uk-text-center">¡Welcome to Engell Tercero Website!</h1>
+    <h2 class="uk-text-center">Wait for it, wait for Upside until November 14</h2>
 </body>
 </html>
